Add mocking examples